--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,25 +1,22 @@
-.button {
-  color: #fff;
-  padding: 10px;
-  width: 100%;
+.btn {
   background: red;
-  max-width: 100%;
-  border-radius: 55px;
+  border: solid 1px red;
+  padding: 10px 30px;
+  display: block;
+  color: #fff;
   margin: 1rem 0;
+  display: inline;
   white-space: nowrap;
-  text-align: center;
-  font-weight: 500;
-  font-size: 0.7rem;
-  border: none;
-  text-decoration: none;
-  transition: all 0.5s ease;
+  border-radius: 6px;
+  transition: all 0.4s linear;
+  text-transform: uppercase;
 }
 
 .button:hover {
   background: #b60202;
 }
 
-.bgDark {
+.btnDark {
   color: #fff;
   padding: 10px;
   width: 100%;
@@ -39,21 +36,18 @@
 
 
 @media screen and (min-width: 1022px) {
-  .button {
+  .btn {
+    background: red;
+    border: solid 1px red;
+    padding: 10px 30px;
+    display: block;
     color: #fff;
-    padding: 10px;
-    width: 100%;
-    /* background: red; */
-    max-width: 100%;
-    border-radius: 55px;
-    margin: 1rem 0;
+    margin: 0 1rem;
+    display: inline;
     white-space: nowrap;
-    text-align: center;
-    font-weight: 500;
-    font-size: 1rem;
-    border: none;
-    text-decoration: none;
-    transition: all 0.5s ease;
+    border-radius: 6px;
+    transition: all 0.4s linear;
+    text-transform: uppercase;
   }
   .button:hover {
     background: #b60202;
