--- a/src/styles/QuoteSection.module.css
+++ b/src/styles/QuoteSection.module.css
@@ -7,10 +7,22 @@
   height: 100%;
 }
 
+.formCard {
+  position: relative;
+  margin-bottom: 4rem;
+  width: 100%;
+  padding: 0; 
+}
+
+
 
 @media screen and (min-width: 1024px) {
   .section {
     margin: 10rem 0;
     height: 100vh;
+  }
+
+  .formCard {
+    padding: 2rem;    
   }
 }
