--- a/src/styles/displayCard.module.css
+++ b/src/styles/displayCard.module.css
@@ -1,10 +1,12 @@
 .card {
   width: 100%;
-  height: 30%;
+  height: 100%;
   background: #fff;
   padding: 2rem;
   border-radius: 6px;
-  position: relative;
+  position: absolute;
+  top: 0;
+  bottom: 50%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
@@ -18,8 +20,13 @@
 
 .body {
   text-align: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
+  padding-top: 4rem;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    height: 50%;
+    /* margin-bottom: 30rem; */
+  }
 }
