--- a/src/styles/loader.module.css
+++ b/src/styles/loader.module.css
@@ -1,9 +1,5 @@
 .card {
-  background: #fff;
-  padding: 2rem;
-  height: 25%;
-  width: 100%;
-  margin: 0 auto;
+  /* padding: 0 2rem; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,5 +9,5 @@
 
 .card h2 {
   font-weight: 600;
-  margin-top: 1rem;
+  margin-left: 1rem;
 }
