--- a/src/styles/Chats.module.css
+++ b/src/styles/Chats.module.css
@@ -1,10 +1,14 @@
+.chatBoard {
+  overflow: hidden;
+}
+
 .activeUsers {
-  width: 40%;
-  /* padding: 0 10px; */
+  width: 30%;
+  
 }
 
 .chatBody {
-  width: 60%;
+  width: 70%;
   background: #fafafa;
   padding: 0 20px;
 }
@@ -55,6 +59,8 @@
 
 .userList {
   background: #fafafa;
+  position: sticky;
+  top: 1rem;
 }
 
 .userList li{
@@ -70,6 +76,10 @@
   cursor: pointer;
 }
 
+.userList li .userName {
+  margin-left: 0.8rem;
+}
+
 .userList li h2 {
   width: 50px;
   height: 50px;
@@ -80,6 +90,13 @@
   justify-content: center;
   align-items: center;
   position: relative;
+}
+
+.userList li h2 img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: solid 2px red;
 }
 
 .userList li h4 {
@@ -94,4 +111,238 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.chatFlexContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.chats {
+  position: relative;
+  overflow: hidden;
+  height: 80vh;
+}
+
+.chats ul{
+  position: relative;
+  overflow: scroll;
+  height: 100%;
+  padding-bottom: 5rem;
+}
+
+.chatContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 2rem 0;
+  position: relative;
+}
+
+.agent {
+  list-style: none;
+  width: 50%;
+  margin-left: 1rem;
+}
+
+.agent p {
+  background: #fff;
+  padding: 10px;
+  font-size: 0.9rem;
+  border-radius: 8px;
+  border: solid 2px #ccc;
+}
+
+.chats img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.replyChat {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 2rem 0;
+  position: relative;
+}
+
+.replyChat img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-top: 4rem;
+}
+
+.reply {
+  list-style: none;
+  width: 50%;
+  margin-right: 1rem;
+  align-self: flex-start;
+}
+
+.reply p {
+  background: red;
+  padding: 10px;
+  font-size: 0.9rem;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.messageInput {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  background: #fff;
+  padding: 1rem 2rem;
+  bottom: 0;
+  left: 0;
+}
+.messageInput .input{
+  display: flex;
+  align-items: center;
+  width: 90%;
+}
+.messageInput .input textarea {
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-radius: 55px;
+  background: #fff !important;
+  border: solid 1px #ccc;
+  margin-left: 1rem;
+  padding: 10px;
+  resize: none;
+  outline: none;
+  overflow: none !important;
+}
+
+.file {
+  font-size: 2rem;
+}
+
+.button {
+  font-size: 2rem;
+  color: red;
+}
+
+@media screen and (max-width: 768px) {
+  .chatFlexContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activeUsers {
+    width: 100%;
+  }
+  
+  .chatBody {
+    width: 100%;
+    background: #fafafa;
+    padding: 0;
+    margin-bottom: 5rem;
+  }
+
+  .userList {
+    border-radius: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .userList li{
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 1rem 0;
+    padding: 10px;
+    background: #fff;
+    color: #333;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+
+  .userList li h4 {
+    display: none;
+  }
+  .userList li p {
+    display: none;
+  }
+
+
+  .userList li h2 {
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    border: solid 2px red;
+  }
+
+  .userList li h2 img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 0;
+    /* border: solid 2px red; */
+  }
+
+  .messageInput {
+    padding: 1rem 1rem;
+    background: #fafafa;
+
+  }
+
+  .messageInput .input{
+    width: 80%;
+  }
+
+  .messageInput .input img {
+    display: none !important;
+  }
+
+  .messageInput .input textarea {
+    border: solid 1px #ccc;
+    margin: 0;
+    resize: none;
+    outline: none;
+    overflow: auto !important;
+  }
+
+  .messageInput .input textarea::placeholder {
+    font-size: 0.8rem;
+  }
+
+  .file {
+    font-size: 1.5rem;
+  }
+  
+  .button {
+    font-size: 1.5rem;
+    color: red;
+  }
+
+  .chats img {
+    display: none !important;
+  }
+
+  .agent {
+    width: 100%;
+    margin-left: 0;
+    padding-right: 20px;
+  }
+  
+  .agent p {
+    padding: 10px;
+  }
+  .reply {
+    width: 100%;
+    margin-right: 0;
+    padding-right: 20px;
+  }
+  
+  .reply p {
+    padding: 10px;
+  }
+  
 }
