--- a/src/styles/loader.module.css
+++ b/src/styles/loader.module.css
@@ -11,3 +11,40 @@
   font-weight: 600;
   margin-left: 1rem;
 }
+
+
+.loaderContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: rgba(155, 5, 5, 0.164);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 9;
+  
+}
+
+.container {
+  background: #fff;
+  transition: cubic-bezier(1, 0, 0, 1);
+  width: 300px;
+  height: 200px;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 6px;
+  color: #333;
+  font-weight: 700;
+}
+
+.container h4 {
+  margin-top: 1rem;
+  color: #e90404;
+}
