--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -156,4 +156,10 @@
     display: block !important;
   }
 
+  .dotIcon {
+    color: #fff;
+    font-size: 2rem;
+    margin-left: 0.1rem;
+  }
+
 }
