--- a/src/styles/NavFooter.module.css
+++ b/src/styles/NavFooter.module.css
@@ -1,4 +1,5 @@
-.navFooter {
+.navFooter,
+.navFooterTrack {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   padding: 5px 0;
@@ -9,5 +10,11 @@
 @media screen and (min-width: 1024px) {
   .navFooter {
     display: block;
+  }
+
+  .navFooterTrack {
+    display: block;
+    background-color: #ff0000;
+    color: #fff;
   }
 }
